src/App.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Slab:wght@300;400;500&display=swap");

body,
input,
button {
  font-family: "Poppins", sans-serif;
  color: #333;
}

h1,
h2,
h3 {
  font-family: "Roboto Slab", serif;
}

.App {
  width: 97vw;
  padding: 20px;
  min-height: 100vh;
  color: #fff;
  background-image: url("/public/images/blackback.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

.App-header {
  position: relative;
  text-align: center;
  font-size: 2rem;
  padding: 20px;
  background-color: #800020; 
  color: #fff;
  background-image: url("/public/images/wineback.jpg"); 
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

button {
  color: #fff;
  background-color: #800020; 
  padding: 10px 20px;
  border-radius: 5px;
  font-weight: bold;
  font-size: 0.8rem;
  outline: none;
  cursor: pointer;
  transition: background-color 0.2s, transform 0.2s, box-shadow 0.2s;
}

button:hover {
  background-color: #660017; 
  transform: scale(1.05);
  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
}

button:disabled {
  color: #f3f3f3;
  background-color: #444;
  cursor: not-allowed;
}

.layout {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 20px;
}

.orange {
  color: orange;
}

.rate-container {
  margin-top: 20px;
  border-top: 2px solid purple;
}

.gold {
  color: gold;
}

.movie-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.movie-rating {
  display: flex;
  align-items: center;
}

.movie-user-rating {
  display: flex;
}

.rate-container .fa-star {
  font-size: 1.8rem;
  cursor: pointer;
}

.movie-item {
  display: grid;
  grid-template-columns: 1fr auto auto;
  border-bottom: 1px solid #ff0000;
  padding-bottom: 10px;
  margin-bottom: 10px;
  margin-top: 20px;
  transition: transform 0.2s, box-shadow 0.2s;
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15); 
  background-color: #800020; 
  padding-top: 20px; 
}

.movie-item:hover {
  transform: scale(1.02);
  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
}

.movie-item svg {
  font-size: 1.2rem;
  margin: 16px 5px;
}

.movie-item h2 {
  margin: 0;
  cursor: pointer;
  color: #ffffff;
  font-size: 1.2rem;
  font-weight: 600;
  padding-top: 20px;
  padding-left: 20px; 
}

.movie-item button {
  margin-left: auto;
  order: 3;
}

.movie-item img {
  width: 100px;
  height: 100px;
  object-fit: cover;
  grid-row: 1 / span 2;
  grid-column: 1;
}

.movie-item p {
  grid-column: 2;
  grid-row: 2;
  color: #666;
  font-size: 0.8rem;
  padding-top: 20px;
  padding-left: 20px; 
}

.login-container {
  width: 50%;
  margin: 0 25%;
}

input,
textarea {
  width: 100%;
  max-width: 90%;
  padding: 10px;
  margin: 8px 0;
  font-size: 0.8rem;
  background-color: rgba(255, 255, 255, 0.1);
  border: 1px solid #ffffff;
  color: #ffffff;
}

.fa-trash {
  color: #30d5c8;
}

h1 {
  color: orange;
}

h1 .fa-film {
  color: white;
  transform: rotate(30deg);
}

.logout-button {
  position: absolute;
  top: 50%;
  right: 20px;
  transform: translateY(-50%);
  display: flex;
  align-items: center;
  cursor: pointer;
  font-size: 0.8rem;
}

.logout-button span {
  margin-left: 10px;
}

.logout-button .fa-sign-out-alt {
  font-size: 1.2rem;
}

.carousel-image {
  width: 100%;
  height: 40vh;
  object-fit: cover;
}

.legend {
  background: #800020 !important; 
  bottom: 0px !important;
}

.carousel-container {
  margin-top: 20px;
}

.App-footer {
  background-color: rgba(128, 0, 32, 0.5); 
  color: #fff;
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 50px;
}

.footer-content {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 100%;
  padding: 0 20px;
}

.footer-content p {
  margin: 0;
}

.admin-section {
    font-size: 1rem; 
    position: absolute;
    right: 20px;
    top: 70%;  
    transform: translateY(-50%);
    cursor: pointer;
  }
  

/* Phone (portrait) */
@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 2) {
  .App {
    width: 97vw;
    padding: 10px;
  }
  input,
  textarea {
    max-width: 80%;
  }

  h1,
  .movie-header {
    font-size: 1.2rem;
  }

  .logout-button {
  }

  .rate-container {
    scale: 80%;
  }
  .movie-header {
    scale: 90%;
  }
}

/* Phone (landscape) */
@media only screen and (min-device-width: 812px) and (max-device-width: 375px) and (-webkit-min-device-pixel-ratio: 2) {
  .App {
    width: 100vw;
    padding: 5px;
  }
  input,
  textarea {
    max-width: 100%;
  }

  h1,
  .movie-header {
    font-size: 1.5rem;
  }

  .logout-button {
    font-size: 0.6rem;
  }
}

/* iPad */
@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) {
  .App {
    width: 97vw;
    padding: 20px;
  }
  input,
  textarea {
    max-width: 80%;
  }

  h1,
  .movie-header {
    font-size: 1.5rem;
  }

  .logout-button {
    font-size: 0.8rem;
  }


}

